--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,17 @@ spring.application.name=ncp_obj_storage
 server.port=8088
 server.address=0.0.0.0
 
-#ncp.bucketName=
-#ncp.accessKey=
-#ncp.secretKey=
+spring.thymeleaf.cache=true
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
+ncp.s3.region=kr-standard
+ncp.s3.endpoint=https://kr.object.ncloudstorage.com
+ncp.s3.bucketName=myapp-obj-sg
+ncp.s3.accessKey=접근키
+ncp.s3.secretKey=비밀키
+
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
