--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ repositories {
 dependencies {
 
     // ncp object storage 의존성 추가 ( = aws s3 )
-    implementation("software.amazon.awssdk:s3:2.34.2")
+    implementation("com.amazonaws:aws-java-sdk-s3:1.12.791")
 
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
