NCP Object Storage 업로드 기능 개발 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,25 @@ spring.application.name=ncp_obj_storage
 server.port=8088
 server.address=0.0.0.0
 
-spring.thymeleaf.cache=true
-spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache=true
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
 
-ncp.s3.region=kr-standard
-ncp.s3.endpoint=https://kr.object.ncloudstorage.com
-ncp.s3.bucketName=myapp-obj-sg
-ncp.s3.accessKey=접근키
-ncp.s3.secretKey=비밀키
+ncp.region=kr-standard
+ncp.end-point=https://kr.object.ncloudstorage.com
+ncp.bucket-name=myapp-obj-sg
+ncp.access-key=접근키
+ncp.secret-key=비밀키
 
+# 파일 업로드 설정
+spring.servlet.multipart.enabled=true
 
+# 하나의 파일에 대한 용량
 spring.servlet.multipart.max-file-size=20MB
+
+# 한번에 처리할 수 있는 용량
 spring.servlet.multipart.max-request-size=20MB
+
+# 이미지 업로드 시 저장할 폴더 경로
+file.upload-dir = C:/upload/
