--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+    id 'war'
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -27,7 +28,11 @@ repositories {
 dependencies {
 
     // ncp object storage 의존성 추가 ( = aws s3 )
-    implementation("com.amazonaws:aws-java-sdk-s3:1.12.791")
+    // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
+    implementation("software.amazon.awssdk:s3:2.34.5")
+
+    // https://mvnrepository.com/artifact/software.amazon.awssdk/bom
+    runtimeOnly("software.amazon.awssdk:bom:2.34.4")
 
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
